	FIX: Fixed a missing NPC sprite in the Hyrule Town inn (#160).
	FIX: Fixed the purple house door being misplaced in the Hyrule Town.
	REM: Removed streams disabling for the feather as it caused them to be reset everytime (#133).
	REM: Removed variant specific tunic, sword and shield hero sprites (#27).
	REM: Removed the old unused dialogue box script.
	REM: Removed unused *.zip tileset files.
	TDO: Setup the quest files for the Solarus launcher.
	TDO: Rescript the feather (#144).
	TDO: Fix Bari enemies animation not being accurate to ALTTP (#143).
	TDO: Link's animation being frozen after reloading a save with the debug when using the feather (#144).
	TDO: Overhaul the bow & arrow system such as in OOT (#145).
	TDO: Redraw hero animations from ALTTD (happy, sad, collapse, ...) (#146).
	TDO: Fix the "Illegal direction for sprite 'hero/diving' in animation 'walking'" error (#147).
	TDO: Fix the map menu being openable when a map transition is playing (#128).
	TDO: Fix a nil value error in the inventory after buying something from Ravio (#92).
	TDO: Replace corrupt files.
	TDO: Fix "door_manager:open_when_switch_activated()" only opening the last door when there are multiple doors (#75).
	TDO: Fix the water level changing animation in the Water Temple (#56).
	TDO: Fix crash on ocarina cinematic because of an invalid animation direction (#63).
	TDO: Progressively switch enemies behaviour to ALTTD'S.
	TDO: Fix diagonal jumpers jump lengths being too high in the mountains (#38).
	TDO: Fix low memory issues on MacOS (#39).
	TDO: Fix low framerate in rooms with lots of conveyor belts (#42).
	TDO: Update the statistics menu with treasures from the Excel file (#46).
	TDO: Fix the HUD clock showing the wrong hour randomly (#114).
	TDO: Fix the world map background not being loaded sometimes (#153).

Alpha 1.17.1 (//23) "Needlefish Update":
	TDO: Remove work *.xcf and *.psd files from the data files.
	TDO: Add the ability to switch shaders through the options menu (#119).