@@ -25199,6 +25199,87 @@ tile{
   pattern = "floor_small.2",
 }
 
+tile{
+  layer = 0,
+  x = 1128,
+  y = 456,
+  width = 24,
+  height = 48,
+  pattern = "wall.4-3",
+}
+
+tile{
+  layer = 0,
+  x = 1088,
+  y = 456,
+  width = 24,
+  height = 48,
+  pattern = "wall.3-3",
+}
+
+tile{
+  layer = 0,
+  x = 1112,
+  y = 504,
+  width = 16,
+  height = 16,
+  pattern = "door_blast.1",
+}
+
+tile{
+  layer = 0,
+  x = 1112,
+  y = 440,
+  width = 16,
+  height = 16,
+  pattern = "door_blast.2",
+}
+
+tile{
+  layer = 0,
+  x = 1104,
+  y = 440,
+  width = 8,
+  height = 16,
+  pattern = "door.2.support.1-2",
+}
+
+tile{
+  layer = 0,
+  x = 1128,
+  y = 440,
+  width = 8,
+  height = 16,
+  pattern = "door.2.support.2-2",
+}
+
+tile{
+  layer = 0,
+  x = 1104,
+  y = 504,
+  width = 8,
+  height = 16,
+  pattern = "door.1.support.1-2",
+}
+
+tile{
+  layer = 0,
+  x = 1128,
+  y = 504,
+  width = 8,
+  height = 16,
+  pattern = "door.1.support.2-2",
+}
+
+tile{
+  layer = 0,
+  x = 1112,
+  y = 456,
+  width = 16,
+  height = 48,
+  pattern = "floor.16-1",
+}
+
 dynamic_tile{
   name = "tile_20_switch_b_1",
   layer = 0,
@@ -26772,20 +26853,24 @@ wall{
 }
 
 door{
+  name = "door_10_n",
   layer = 0,
   x = 1112,
   y = 264,
   direction = 1,
   sprite = "entities/doors/inside/door_d2_normal",
+  savegame_variable = "dungeon_5_1f_door_4_10",
   opening_condition_consumed = true,
 }
 
 door{
+  name = "door_4_s",
   layer = 0,
   x = 1112,
   y = 200,
   direction = 3,
   sprite = "entities/doors/inside/door_d2_normal",
+  savegame_variable = "dungeon_5_1f_door_4_10",
   opening_condition_consumed = true,
 }
 
@@ -26856,11 +26941,13 @@ wall{
 }
 
 door{
+  name = "door_15_n",
   layer = 0,
   x = 792,
   y = 504,
   direction = 1,
   sprite = "entities/doors/inside/door_d2_small_key",
+  savegame_variable = "dungeon_5_1f_door_9_15",
   opening_method = "interaction_if_savegame_variable",
   opening_condition = "dungeon_5_small_keys",
   opening_condition_consumed = true,
@@ -26868,11 +26955,13 @@ door{
 }
 
 door{
+  name = "door_9_s",
   layer = 0,
   x = 792,
   y = 440,
   direction = 3,
   sprite = "entities/doors/inside/door_d2_small_key",
+  savegame_variable = "dungeon_5_1f_door_9_15",
   opening_method = "interaction_if_savegame_variable",
   opening_condition = "dungeon_5_small_keys",
   opening_condition_consumed = true,
@@ -27123,6 +27212,82 @@ enemy{
   direction = 0,
   breed = "dungeons/gibdo",
   treasure_name = "random_mountains",
+}
+
+sensor{
+  name = "sensor_10_door_1",
+  layer = 0,
+  x = 1112,
+  y = 293,
+  width = 32,
+  height = 16,
+}
+
+sensor{
+  name = "sensor_10_door_2",
+  layer = 0,
+  x = 952,
+  y = 365,
+  width = 16,
+  height = 16,
+}
+
+sensor{
+  name = "sensor_10_door_3",
+  layer = 0,
+  x = 1120,
+  y = 493,
+  width = 16,
+  height = 16,
+}
+
+sensor{
+  name = "sensor_10_door_4",
+  layer = 0,
+  x = 1288,
+  y = 365,
+  width = 16,
+  height = 16,
+}
+
+sensor{
+  name = "sensor_10_door_5",
+  layer = 0,
+  x = 1288,
+  y = 117,
+  width = 16,
+  height = 16,
+}
+
+wall{
+  layer = 0,
+  x = 1112,
+  y = 440,
+  width = 16,
+  height = 16,
+  stops_npcs = true,
+  stops_enemies = true,
+  stops_blocks = true,
+}
+
+wall{
+  layer = 0,
+  x = 1112,
+  y = 504,
+  width = 16,
+  height = 16,
+  stops_npcs = true,
+  stops_enemies = true,
+  stops_blocks = true,
+}
+
+sensor{
+  name = "sensor_10_door_6",
+  layer = 0,
+  x = 952,
+  y = 117,
+  width = 16,
+  height = 16,
 }
 
 tile{
@@ -28137,6 +28302,42 @@ tile{
   layer = 1,
   x = 784,
   y = 256,
+  width = 32,
+  height = 8,
+  pattern = "door_top.1-3",
+}
+
+tile{
+  layer = 1,
+  x = 1104,
+  y = 456,
+  width = 32,
+  height = 8,
+  pattern = "door_cache.2-3",
+}
+
+tile{
+  layer = 1,
+  x = 1104,
+  y = 496,
+  width = 32,
+  height = 8,
+  pattern = "door_cache.1-3",
+}
+
+tile{
+  layer = 1,
+  x = 1104,
+  y = 456,
+  width = 32,
+  height = 8,
+  pattern = "door_top.2-3",
+}
+
+tile{
+  layer = 1,
+  x = 1104,
+  y = 496,
   width = 32,
   height = 8,
   pattern = "door_top.1-3",
