@@ -399,6 +399,7 @@ Alpha 1.17 (started 03/05/23) "Needlefish Update":
 	REM: Removed variant specific tunic, sword and shield hero sprites (#27).
 	REM: Removed the old unused dialogue box script.
 	REM: Removed unused *.zip tileset files.
+	TDO: Fix map:set_doors_open() playing a sound when it shouldn't (#163).
 	TDO: Setup the quest files for the Solarus launcher.
 	TDO: Rescript the feather (#144).
 	TDO: Fix Bari enemies animation not being accurate to ALTTP (#143).
